@@ -1,0 +1,5 @@
+"Close pfs stream. See also help for pfsopen function.\n"
+"\n"
+"usage: pfsclose( pfs_struct );\n"
+"\n  pfs_struct - structure returned by pfsopen or pfsget"
+;
