@@ -1,0 +1,6 @@
+"Read next frame from the pfs stream. See also help for pfsopen function.\n"
+"\n"
+"usage: new_pfs_struct = pfsget( pfs_struct );\n"
+"  pfs_struct - the structure returned by pfsopen or pfsget\n"
+"  new_pfs_struct - new structure with new fields containing channels and tags\n"
+;
