@@ -1,0 +1,23 @@
+"Write frame to the pfs stream. See also help for pfsopen function.\n"
+"\n"
+"usage: pfsput( pfs_struct );\n"
+"  pfs_struct - the structure returned by pfsopen. The stream must be open for writing\n"
+"\n"
+"Typical usage:\n"
+"\n"
+"## Create you image \n"
+"Y = ones( 512, 512 );\n"
+"Y(256,:) = 10;\n"
+"\n"
+"## Create pfs stream for writing\n"
+"pout = pfsopen( \"output.pfs\", size( Y ) );\n"
+"\n"
+"## Add channels\n"
+"pout.channels.Y = Y;\n"
+"\n"
+"## Write frame. You can 'put' multiple frames.\n"
+"pfsput( pout );\n"
+"\n"
+"##Close stream\n"
+"pfsclose( pout )\n"
+;
