@@ -1,0 +1,11 @@
+"Tranform between color spaces using pfs library.\n"
+"\n"
+"usage: [C1 C2 C2] = pfstranform_colorspace( inCSname, c1, c2, c3, outCSname );\n"
+"  inCSname - name of the input color space\n"
+"  c<n> - matrix with n-th channel of input color space\n"
+"  C<n> - matrix with n-th channel of output color space\n"
+"  outCSname - name of the output color space\n"
+"\n"
+"Recognized color space names: 'XYZ', 'RGB', 'sRGB', 'YUV', 'Yxy'.\n"
+"Color space names are case insensitive.\n"
+;
