@@ -1,3 +1,6 @@
+pfstools 2.0.0 <?>
+	* This is an experimental release
+
 pfstools 1.9.0 <17.09.2014>
 	* added: CMake build system (to replace automake in future releases)
 	* changed: pfsinrgbe & pfsoutrgbe do not correct for Radiance WHITE_EFFICACY by default. Note that this makes absolute values stored in .hdr files using earlier pfstools version smaller then they should be. Check manual pages for pfsinrgbe.
